fix font family, fix button, fix dark mode

--- a/htdocs/luci-static/argon/css/style.css
+++ b/htdocs/luci-static/argon/css/style.css
@@ -64,7 +64,8 @@
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
-    --font-family-sans-serif: Open Sans, sans-serif;
+    --font-family-normal: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Helvetica, Arial;
+    --font-family-sans-serif: "PingFang SC", "Microsoft YaHei UI", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 }
 
@@ -249,7 +250,7 @@ body {
     padding: 0px;
     height: 100%;
     font-size: 16px;
-    font-family: Open Sans, PingFangSC-Regular, Microsoft Yahei, WenQuanYi Micro Hei, "Helvetica Neue", Helvetica, Hiragino Sans GB, sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
 }
 
 /*** Main Loading ***/
@@ -477,7 +478,6 @@ footer>a {
 .pull-right {
     float: right;
     margin-top: 0.5rem;
-    margin-right: 1rem;
 }
 
 .pull-left {
@@ -518,7 +518,8 @@ footer>a {
 }
 
 #maincontent>.container>p {
-    color: #cccccc;
+    color: #32325d;
+    margin-left: 1rem;
 }
 
 li {
@@ -787,7 +788,12 @@ select {
     color: black;
 }
 
-
+/*label notice*/
+body > div > div.main-right > header > div > div > div > a {
+    background-color: #ffffff !important;
+    color: #f66908 !important;
+    box-shadow: 0px 0px 15px;
+}
 
 /* change */
 
@@ -798,20 +804,22 @@ select {
 .uci-change-list ins,
 .uci-change-legend-label ins {
     text-decoration: none;
-    border: 1px solid #00FF00;
-    background-color: #CCFFCC;
+    border: 1px solid #28a645;
+    background-color: #28a645;
     display: block;
     padding: 2px;
+    border-radius: 0.2rem;
 }
 
 .uci-change-list del,
 .uci-change-legend-label del {
     text-decoration: none;
-    border: 1px solid #FF0000;
-    background-color: #FFCCCC;
+    border: 1px solid #f97583;
+    background-color: #f97583;
     display: block;
     font-style: normal;
     padding: 2px;
+    border-radius: 0.2rem;
 }
 
 .uci-change-list var,
@@ -822,6 +830,7 @@ select {
     display: block;
     font-style: normal;
     padding: 2px;
+    border-radius: 0.2rem;
 
 }
 
@@ -831,10 +840,12 @@ select {
     white-space: pre;
     font-style: normal;
     padding: 0px;
+    border-radius: 0.2rem;
 }
 
 .uci-change-legend {
     padding: 5px;
+    margin: 0.5rem;
 }
 
 .uci-change-legend-label {
@@ -865,6 +876,10 @@ select {
 .uci-change-list del,
 .uci-change-list ins {
     padding: 0.5rem;
+}
+
+#maincontent > div.container:first-child > fieldset.cbi-section:nth-child(4) {
+    padding: 1rem;
 }
 
 /* other fix */
@@ -1027,7 +1042,7 @@ ul li .cbi-input-checkbox {
     margin: 0;
     display: inline-flex;
     align-items: center;
-
+    margin: 1rem;
 }
 
 .cbi-section-create>* {
@@ -1192,6 +1207,17 @@ input[name="nslookup"] {
     white-space: normal;
 }
 
+.cbi-input-reset {
+    background-color: #ea4a5a !important;
+    color: #fff !important;
+}
+
+#maincontent > div.container:first-child > table:last-child {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .03);
+    border-radius: 0.375rem;
+    background: #fff;
+}
+
 /* fix status processes */
 
 .node-status-processes>.main .table .tr .td:nth-child(3) {
@@ -1324,11 +1350,8 @@ body.lang_pl.node-main-login .cbi-value-title {
     font-weight: bold;
 }
 #shadowsocksr_status > em > b > font {
-    font-size: 1rem;
+    font-size: 0.7rem;
 }
-
-
-
 
 .table {
     display: table;
@@ -1486,7 +1509,7 @@ input {
     box-shadow: 0 3px 2px rgba(233, 236, 239, .05);
     outline: none;
     transition: box-shadow .15s ease;
-    margin: 0.25rem;
+    margin: 1rem;
 }
 
 select:not([multiple="multiple"]):focus,
@@ -1841,7 +1864,7 @@ div>.table>.tbody>.tr:nth-of-type(2n) {
 }
 
 .main>.main-left>.nav {
-    margin-top: 0.5rem;
+    margin: 0.5rem;
 }
 
 .main>.main-left>.nav>li a {
@@ -2681,12 +2704,12 @@ select[multiple="multiple"] {
 #cbi-network .cbi-section .cbi-section-node {}
 
 .cbi-section-node .cbi-value {
-    padding: 0.3rem 0rem 0.3rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
 
 .cbi-tabcontainer>.cbi-value:nth-of-type(2n) {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
 }
 
 .cbi-value-field,
@@ -2833,6 +2856,7 @@ td>.ifacebadge {
     min-height: 15rem;
     padding: 1rem;
     font-size: small;
+    font-family: monospace;
     color: #5F5F5F;
     border-radius: 0;
     background-color: #FFF;
@@ -3121,6 +3145,10 @@ header>.container>.pull-right>* {
     display: none;
 }
 
+div.cbi-tab-descr {
+    margin: 1rem;
+}
+
 /* fix Main Login*/
 .node-main-login>.main>.main-right>header {
     background: none !important;
@@ -3384,10 +3412,11 @@ header>.container>.pull-right>* {
     bottom: 0;
     position: absolute;
     width: 100%;
+    color: #fff;
 }
 
 .node-main-login footer>a {
-    color: #5e72e4;
+    color: #ffffff;
 }
 
 /* fix status overview */
@@ -3540,7 +3569,16 @@ header>.container>.pull-right>* {
     font-size: 0.875rem;
 }
 
-
+#maincontent > div > div > form > input:nth-child(3) {
+    background-color: #5d72e4;
+    margin-top: 5px;
+    color: #fff;
+}
+#maincontent > div > div > form > input:nth-child(4) {
+    background-color: #5d72e4;
+    margin-top: 5px;
+    color: #fff;
+}
 
 
 /* fix nlbw/display*/
@@ -3563,7 +3601,6 @@ header>.container>.pull-right>* {
     }
 
     .cbi-button {
-        /*padding: 0.3rem 1.5rem;*/
         font-size: 0.8rem;
     }
 
@@ -3719,7 +3756,7 @@ header>.container>.pull-right>* {
     }
 
     #maincontent>.container {
-        margin: 0 0.5rem 0.5rem 0.5rem;
+        margin: 0 1rem 1rem 1rem;
     }
 
     .main>.main-left>.nav>.slide>.menu {
@@ -3913,8 +3950,11 @@ header>.container>.pull-right>* {
     .node-main-login .errorbox {
         background-color: #3d0303 !important;
     }
+    .node-main-login footer{
+        color: #ccc;
+    }
     .node-main-login footer>a {
-        color: darkslateblue;
+        color: #ccc;
     }
     input:-webkit-autofill {
         background-color: #3c3c3c !important;
@@ -4037,16 +4077,14 @@ header>.container>.pull-right>* {
         color: #ccc !important;
     }
     footer {
-        color: darkslateblue;
+        color: #ccc;
     }
     a:-webkit-any-link {
         color: -webkit-link;
         cursor: pointer;
-        color: darkslateblue;
-    }
-    #wan4_i > small:last-child > a {
         color: #ccc;
     }
+
     table>tbody>tr>th,
     table>tfoot>tr>th,
     table>thead>tr>th {
@@ -4133,7 +4171,7 @@ header>.container>.pull-right>* {
     }
 
     .cbi-tabcontainer>.cbi-value:nth-of-type(2n) {
-        background-color: #252526;
+        background-color: #1e1e1e;
     }
 
     .cbi-value-title {
@@ -4198,7 +4236,7 @@ header>.container>.pull-right>* {
     }
 
     .cbi-section-node .cbi-value {
-        padding: 1rem 1rem 0.3rem 1rem;
+        padding: 1rem 1rem 1rem 1rem;
     }
 
     .ifacebox {
@@ -4357,6 +4395,29 @@ header>.container>.pull-right>* {
 #detail-bubble .head .dismiss {
     color: #cccccc !important;
 }
+
+/*label notice*/
+body > div > div.main-right > header > div > div > div > a {
+    background-color: #333333 !important;
+    color: #a04100 !important;
+}
+
+/*sys reboot*/
+#maincontent>.container>p {
+    color: #ccc !important;
+}
+
+.cbi-input-reset {
+    background-color: #cb2431 !important;
+    color: #fff !important;
+}
+
+/*status realtime*/
+#maincontent > div.container:first-child > table:last-child {
+    box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, .35);
+    background: #1e1e1e;
+}
+
 @media (prefers-color-scheme: dark) and (max-width: 480px) {
     .node-status-iptables>.main div>.cbi-map>form {
         background-color: #1e1e1e;
